third_party/vendor/rustversion-1.0.5/tests/ui/bad-bound.stderr
error: expected rustc release number like 1.31, or nightly date like 2020-02-25
 --> $DIR/bad-bound.rs:1:22
  |
1 | #[rustversion::since(stable)]
  |                      ^^^^^^

error: expected rustc release number like 1.31, or nightly date like 2020-02-25
 --> $DIR/bad-bound.rs:4:26
  |
4 | #[rustversion::any(since(stable))]
  |                          ^^^^^^
